[package]
name = "fun_stuff"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = "0.8.2"
mach2 = "0.6.0"
libc = "0.2.183"

[[bin]]
name = "hackerrank"
path = "src/hackerrank/hackerrank.rs"

[[bin]]
name = "coding_game"
path = "src/coding_game/program.rs"

[[bin]]
name = "reverse_shell"
path = "src/reverse_shell/program.rs"


[[bench]]
name = "main"
harness = false
path = "benches/main.rs"

[profile.release]
lto = false
codegen-units = 1