[package]
name = "fun_stuff"
version = "0.1.0"
edition = "2024"

[dependencies]
criterion = "0.8.2"
mach2 = "0.6.0"
libc = "0.2.183"

[[bin]]
name = "hacker_earth"
path = "src/challenges/hacker_earth/hacker_earth.rs"

[[bin]]
name = "hacker_rank"
path = "src/challenges/hackerrank/program.rs"

[[bin]]
name = "coding_game"
path = "src/challenges/coding_game/program.rs"

[[bin]]
name = "competitive_programming"
path = "src/challenges/competitive_programming/program.rs"


[[bin]]
name = "reverse_shell"
path = "src/reverse_shell/program.rs"


[[bench]]
name = "main"
harness = false
path = "benches/main.rs"

[profile.release]
lto = false
codegen-units = 1